--- a/index.html
+++ b/index.html
@@ -361,6 +361,450 @@
     </div>
 </div>
 
+<!--item form-->
+<section class="container mt-5">
+    <div>
+        <div class="container-fluid searchBarParent">
+            <div id="searchBar" class="input-group mb-3">
+                <input id="searchInputField" type="text" class="form-control" placeholder="Search Items"
+                       aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
+            </div>
+        </div>
+
+        <div id="crudButton" class="relativePosition">
+            <div class="absolutePosition">
+                <button id="btnSave" class="noBorder btn btn-outline-secondary newButton whiteTextColor"
+                        data-bs-toggle="modal"
+                        data-bs-target="#saveitems" type="button">Save
+                </button>
+                <button id="btnUpdate"
+                        class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor"
+                        data-bs-toggle="modal" data-bs-target="#updateitems" type="button">Update
+                </button>
+                <button id="btnDelete" class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor"
+                        data-bs-toggle="modal" data-bs-target="#deleteitems" type="button">Delete
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div id="d1" class="row margin col-sm-4 col-xs">
+            <h6 class="viewCustomerTitle">View Items</h6>
+        </div>
+    </div>
+
+    <div class="itemTable">
+        <table class="table">
+            <thead>
+            <tr class="table-info">
+                <th class="OrderTableHead " scope="col">Item_Id</th>
+                <th class="OrderTableHead" scope="col">Item_name</th>
+                <th class="OrderTableHead" scope="col">Quantity</th>
+                <th class="OrderTableHead" scope="col">Unit_Price</th>
+            </tr>
+            </thead>
+            <tbody id="orderTable">
+            <tr>
+                <th class="orderTableBody" scope="row">1</th>
+                <td class="orderTableBody">Mark</td>
+                <td class="orderTableBody">Otto</td>
+                <td class="orderTableBody">@mdo</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">2</th>
+                <td class="orderTableBody">Jacob</td>
+                <td class="orderTableBody">Thornton</td>
+                <td class="orderTableBody">@fat</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">3</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">5</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">6</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">7</th>
+                <td class="orderTableBody">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
+
+<!--save Items modal-->
+<div class="modal" tabindex="-1" id="saveitems">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add New Items</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="item_id" class="form-label ">Item Id</label>
+                <input type="text" id="item_id" class="form-control" placeholder="enter id"
+                       aria-label="item_id">
+
+                <label for="item_name" class="form-label ">Item Name</label>
+                <input type="text" id="item_name" class="form-control" placeholder="enter name"
+                       aria-label="item_name">
+
+                <label for="quantity" class="form-label ">Quanity</label>
+                <input type="text" id="quantity" class="form-control" placeholder="enter quantity"
+                       aria-label="quantity">
+
+                <label for="price" class="form-label ">Price</label>
+                <input type="text" id="price" class="form-control" placeholder="enter price"
+                       aria-label="price">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--update Items modal-->
+<div class="modal" tabindex="-1" id="updateitems">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Update Items</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="i_id" class="form-label ">Item Id</label>
+                <input type="text" id="i_id" class="form-control" placeholder="enter id" aria-label="item_Id">
+
+                <label for="i_name" class="form-label ">Item Name</label>
+                <input type="text" id="i_name" class="form-control" placeholder="enter name" aria-label="item_name">
+
+                <label for="i_quanity" class="form-label ">Quantity</label>
+                <input type="text" id="i_quanity" class="form-control" placeholder="enter quantity"
+                       aria-label="quantity">
+
+                <label for="i_price" class="form-label ">Price</label>
+                <input type="text" id="i_price" class="form-control" placeholder="enter price"
+                       aria-label="price">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Update</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--delete Items modal-->
+<div class="modal" tabindex="-1" id="deleteitems">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete Items</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="id" class="form-label ">Item Id</label>
+                <input type="text" id="id" class="form-control" placeholder="enter id" aria-label="item_id">
+
+                <label for="name" class="form-label ">Item Name</label>
+                <input type="text" id="name" class="form-control" placeholder="enter name" aria-label="item_name">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--order form-->
+<section id="order" style="margin-top: 30px" class="pb-5">
+    <div class="d-flex justify-content-end mt-3 me-3">
+        <button class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#myModal">All Orders</button>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-md-5 ">
+            <div class="card shadow-card mb-3 ms-3">
+                <div class="card-body">
+                    <h2 class="card-title">Add Item</h2>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group">
+                                <label for="item-code">Item Code</label>
+                                <input type="text" id="item-code" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="form-group">
+                                <label for="item-qty">Qty</label>
+                                <input type="text" id="item-qty" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-md-7">
+                            <div class="form-group">
+                                <label for="item-name">Item Name</label>
+                                <input type="text" id="item-name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="form-group">
+                                <label for="item-price">Price</label>
+                                <input type="text" id="item-price" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class="btn btn-primary btn-lg mt-3 fw-bold">Create</button>
+                </div>
+            </div>
+
+
+            <div class="card shadow-card mb-3 ms-3">
+                <div class="card-body">
+                    <h2 class="card-title">Order Details</h2>
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group ">
+                                <label for="OrderID">Order Id</label>
+                                <input type="text" id="OrderID" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-md-5">
+                            <div class="form-group  ">
+                                <label for="customerId">Customer Id</label>
+                                <input type="text" id="customerId" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group  ">
+                                <label for="date">Date</label>
+                                <input type="date" id="date" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="col-md-5">
+                            <div class="form-group  ">
+                                <label for="customerName">Customer Name</label>
+                                <input type="text" id="customerName" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class="btn btn-primary mt-3 btn-lg fw-bold">Create</button>
+
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-7">
+            <div class="card me-3">
+                <div class="card-body">
+                    <h2 class="card-title ms-2">Invoice</h2>
+                    <div class="row">
+                        <div class="d-flex justify-content-around">
+                            <h5 class="justify-content-start">Select payment type</h5>
+                            <div class="form-check ">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                       id="flexRadioDefault1">
+                                <label class="form-check-label" for="flexRadioDefault1">
+                                    Cash
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                       id="flexRadioDefault2" checked>
+                                <label class="form-check-label" for="flexRadioDefault2">
+                                    Card
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row mt-3">
+                        <div class="col-md-7">
+                            <div class="form-group mb- cash">
+                                <label for="OrderID">Cash</label>
+                                <input type="text" id="cash" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="col-md-5">
+                            <div class="form-group mb- discount">
+                                <label for="date">Discount</label>
+                                <input type="text" id="discount" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="form-group mb- balance">
+                                <label for="customerId">Balance</label>
+                                <input type="text" id="balance" class="form-control">
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group mb- Total">
+                                <label>Total</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group mb- Discount">
+                                <label> Discount</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group mb- NetTotal">
+                                <label>Net Total</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class="btn btn-primary mt-3 fw-bold btn-lg">Perches</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Customer table-->
+    <div class="row justify-content-center m-2 ">
+        <div class="  col-lg-10   border border-light-subtle  mt-3  rounded shadow-card">
+            <h1>Cart</h1>
+            <div class="table-responsive">
+                <table class="p-5 table ">
+                    <!--Customer head-->
+                    <thead>
+                    <th>Item Code</th>
+                    <th>Item Name</th>
+                    <th>Item Price</th>
+                    <th>Qty</th>
+                    <th>Total</th>
+                    <th>Action</th>
+                    </thead>
+                    <!--Customer body-->
+                    <tbody>
+                    <tr>
+                        <td>I001</td>
+                        <td>Sunlight</td>
+                        <td>150.00</td>
+                        <td>3</td>
+                        <td>450.00</td>
+                        <td>
+                            <button>remove</button>
+                        </td>
+                    </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <!-- View all order Modal -->
+    <div class="modal mdal" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Modal Heading</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Order ID</th>
+                            <th>Customer Id</th>
+                            <th>Customer Name</th>
+                            <th>Item Code</th>
+                            <th>Item Name</th>
+                            <th>Qty</th>
+                            <th>Total </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>mary@example.com</td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>july@example.com</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
