--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto " id="navMenu">
-                <a class="nav-link active" aria-current="page" href="dashboardForm.html">Dashboard </a>
-                <a class="nav-link active" href="customerForm.html">Customer</a>
-                <a class="nav-link active" href="itemForm.html">Item</a>
-                <a class="nav-link active" href="orderForm.html">Place Order</a>
-                <a class="nav-link active" href="login.html">Log Out</a>
+                <span class="nav-link " aria-current="page" id="dashboadClick">Dashboard </span>
+                <span class="nav-link " >Customer</span>
+                <span class="nav-link " >Item</span>
+                <span class="nav-link " >Place Order</span>
+                <span class="nav-link " >Log Out</span>
             </ul>
         </div>
     </nav>
@@ -805,8 +805,11 @@
         </div>
     </div>
 </section>
+
+<script src="assets/lib/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+<script src="assets/main.js"></script>
 </body>
 </html>
