--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             <div class="form-text passwordHelp">Forget password?</div>
         </div>
         <div class="d-flex ">
-            <button  type="submit" class="btn btn-primary me-3 signIn">SIGN IN</button>
+            <button  type="button" class="btn btn-primary me-3 signIn">SIGN IN</button>
         </div>
 
         <div class="noAcc">
