--- a/signUp.html
+++ b/signUp.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up form</title>
-    <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="assets/css/signup.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body >
 
-<div id="main" class="container-fluid  justify-content-center container shadow-card left-box "  >
+<div id="sign-up-form" class="container-fluid  justify-content-center container shadow-card left-box "  >
     <span class="welcome">Welcome to the </span>
     <span class="GreenCart" >Green Cart </span>
     <h5>Sign Up Here</h5>
@@ -26,7 +26,11 @@
 
         </div>
         <div class="d-flex ">
-            <button  type="submit" class="btn btn-primary me-3 signIn">SIGN UP</button>
+            <button  type="button" class="btn btn-primary me-3 sign-up" >SIGN UP</button>
+        </div>
+
+        <div class="d-flex ">
+            <button  type="button" class="btn btn-primary " id="back-btn">BACK</button>
         </div>
     </form>
 </div>
