--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/item.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
     <link rel="stylesheet" href="assets/css/customer.css">
+    <link rel="stylesheet" href="assets/css/signup.css">
 </head>
 <body>
 <!--    nav section-->
