--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login form</title>
     <link rel="stylesheet" href="assets/css/login.css">
-    <link rel="stylesheet" href="assets/css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -24,7 +23,7 @@
         <div  class="mb-3 ms-3 me-3 password justify-content-center" >
             <label for="InputPassword1" class="form-label" >Enter your password </label>
             <input type="password" class="form-control" id="InputPassword1" placeholder="password">
-            <div class="form-text passwordHelp">Forget password?</div>
+            <a class="form-text-passwordHelp" href="forgetPassword.index.html">Forget password?</a>
         </div>
         <div class="d-flex ">
             <button  type="button" class="btn btn-primary me-3 signIn">SIGN IN</button>
