--- a/signUp.html
+++ b/signUp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up form</title>
+    <title>signup form</title>
     <link rel="stylesheet" href="assets/css/signup.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -13,25 +13,23 @@
 
 <div id="sign-up-form" class="container-fluid  justify-content-center container shadow-card left-box "  >
     <span class="welcome">Welcome to the </span>
-    <span class="GreenCart" >Green Cart </span>
-    <h5>Sign Up Here</h5>
+    <span class="GreenCart" >GreenCart </span>
+    <h5>Sign Up Hear</h5>
     <form id="form"  >
         <div class="mb-3 mt-5 ms-3 me-3 userName justify-content-center " >
             <label for="InputUserName" class="form-label">Enter your username</label>
-            <input type="text" class="form-control " id="InputUserName" aria-describedby="passwordHelp">
+            <input type="text" class="form-control " id="InputUserName" aria-describedby="passwordHelp" placeholder="username">
         </div>
         <div  class="mb-3 ms-3 me-3 password justify-content-center" >
-            <label for="InputPassword1" class="form-label">Enter your password </label>
-            <input type="password" class="form-control" id="InputPassword1">
+            <label for="InputPassword1" class="form-label" >Enter your password </label>
+            <input type="password" class="form-control" id="InputPassword1" placeholder="password">
 
         </div>
         <div class="d-flex ">
-            <button  type="button" class="btn btn-primary me-3 sign-up" >SIGN UP</button>
+            <button  type="button" class="btn btn-primary me-3 " id="back">BACK</button>
+            <button  type="button" class="btn btn-primary me-3 " id="sign-up">SIGN UP</button>
         </div>
 
-        <div class="d-flex ">
-            <button  type="button" class="btn btn-primary " id="back-btn">BACK</button>
-        </div>
     </form>
 </div>
 
