--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/dashboard.css">
     <link rel="stylesheet" href="assets/css/customer.css">
     <link rel="stylesheet" href="assets/css/signup.css">
+    <link rel="stylesheet" href="assets/css/forgetPassword.css">
 </head>
 <body>
 <!--    nav section-->
@@ -51,7 +52,7 @@
         <div class="mb-3 ms-3 me-3 password justify-content-center">
             <label for="InputPassword1" class="form-label">Enter your password </label>
             <input type="password" class="form-control" id="InputPassword1" placeholder="password">
-            <div class="form-text passwordHelp">Forget password?</div>
+            <a class="form-text " id="passwordHelp" href="forgetPassword.index.html">Forget password?</a>
         </div>
         <div class="d-flex ">
             <button type="button" class="btn btn-primary me-3" id="sign-in-btn">SIGN IN</button>
