--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save</button>
+                <button type="button" class="btn btn-primary" id="customer-save">Save</button>
             </div>
         </div>
     </div>
@@ -841,6 +841,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 <script src="assets/js/main.js"></script>
+<script src="assets/js/customer.js"></script>
 
 </body>
 </html>
