--- a/index.html
+++ b/index.html
@@ -253,50 +253,7 @@
                 <th class="OrderTableHead" scope="col">City</th>
             </tr>
             </thead>
-            <tbody>
-
-            <tr>
-                <th class="orderTableBody" scope="row">2</th>
-                <td class="orderTableBody">Jacob</td>
-                <td class="orderTableBody">Thornton</td>
-                <td class="orderTableBody">@fat</td>
-
-            </tr>
-            <tr>
-                <th class="orderTableBody" scope="row">1</th>
-                <td class="orderTableBody">Mark</td>
-                <td class="orderTableBody">Otto</td>
-                <td class="orderTableBody">@mdo</td>
-
-            </tr>
-            <tr>
-                <th class="orderTableBody" scope="row">3</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-
-            </tr>
-
-            <tr>
-                <th class="orderTableBody" scope="row">4</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-            </tr>
-
-            <tr>
-                <th class="orderTableBody" scope="row">5</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-            </tr>
-
-            <tr>
-                <th class="orderTableBody" scope="row">6</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-            </tr>
+            <tbody id="customer-table">
 
             </tbody>
         </table>
@@ -837,11 +794,12 @@
 
 
 <script src="assets/lib/jquery-3.7.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
 <script src="assets/js/main.js"></script>
-<script src="assets/js/customer.js"></script>
+<script type="module" src="controller/customer.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"></script>
+
 
 </body>
 </html>
