--- a/index.html
+++ b/index.html
@@ -391,58 +391,8 @@
                 <th class="OrderTableHead" scope="col">Unit_Price</th>
             </tr>
             </thead>
-            <tbody id="orderTable">
-            <tr>
-                <th class="orderTableBody" scope="row">1</th>
-                <td class="orderTableBody">Mark</td>
-                <td class="orderTableBody">Otto</td>
-                <td class="orderTableBody">@mdo</td>
+            <tbody id="item-table">
 
-            </tr>
-
-            <tr>
-                <th class="orderTableBody" scope="row">2</th>
-                <td class="orderTableBody">Jacob</td>
-                <td class="orderTableBody">Thornton</td>
-                <td class="orderTableBody">@fat</td>
-
-            </tr>
-
-            <tr>
-                <th class="orderTableBody" scope="row">3</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-
-            </tr>
-
-            <tr>
-                <th class="orderTableBody" scope="row">4</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-            </tr>
-
-            <tr>
-                <th class="orderTableBody" scope="row">5</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-            </tr>
-
-            <tr>
-                <th class="orderTableBody" scope="row">6</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-            </tr>
-
-            <tr>
-                <th class="orderTableBody" scope="row">7</th>
-                <td class="orderTableBody">Larry the Bird</td>
-                <td class="orderTableBody">@twitter</td>
-                <td class="orderTableBody">@twitter</td>
-            </tr>
             </tbody>
         </table>
     </div>
@@ -475,7 +425,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save</button>
+                <button type="button" class="btn btn-primary" id="item-save">Save</button>
             </div>
         </div>
     </div>
@@ -795,7 +745,8 @@
 
 <script src="assets/lib/jquery-3.7.1.min.js"></script>
 <script src="assets/js/main.js"></script>
-<script type="module" src="controller/customer.js"></script>
+<script type="module" src="controller/CustomerController.js"></script>
+<script type="module" src="controller/ItemController.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 crossorigin="anonymous"></script>
