--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
     </div>
 
-    <div class="tableDiv customerTable">
+    <div class="tableDiv customerTable" id="customer-table">
         <table class="table">
             <thead class="tableHead">
             <tr class="table-info">
@@ -248,11 +248,11 @@
 </div>
 
 <!--delete Customers modal-->
-<div class="modal" tabindex="-1 " id="deletecustomer">
+<div class="modal" tabindex="-1 " id="delete-customer-modal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Update Customers</h5>
+                <h5 class="modal-title">Delete Customers</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -266,7 +266,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary " data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Delete</button>
+                <button type="button" class="btn btn-primary" id="delete-customer">Delete</button>
             </div>
         </div>
     </div>
